--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,9 +5,16 @@
    &--gutters {
       margin-right: -65px;
    }
+   &--gutters-large {
+      margin-right: -100px;
+   }
    
    &--gutters > div { /*:not(:last-child) {*/
       padding-right: 65px;
+   }
+   
+   &--gutters-large > div { /*:not(:last-child) {*/
+      padding-right: 100px;
    }
    
    &__b-margin-until-medium {
@@ -27,6 +34,11 @@
       
       &__medium-4--larger {
          width: 37%
+      }
+      
+      &__medium-6 {
+         float: left;
+         width: 50%;
       }
       
       &__medium-8 {
