--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,11 +4,13 @@
 @import "base/_mixins";
 
 @import "modules/_button";
+@import "modules/_feature-item";
 @import "modules/_generic-content";
 @import "modules/_headline";
 @import "modules/_large-hero";
 @import "modules/_page-section";
 @import "modules/_row";
+@import "modules/_section-title";
 @import "modules/_wrapper";
 
 
