--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -8,6 +8,24 @@
       max-width: 976px;
    }
    
+   &--no-padding-until-medium {
+      padding-left: 0;
+      padding-right: 0;
+      
+      @mixin atMedium {
+         padding: 0 18px;
+      }
+   }
+   
+   &--no-padding-until-large {
+      padding-left: 0;
+      padding-right: 0;
+      
+      @mixin atLarge {
+         padding: 0 18px;
+      }
+   }
+   
    .wrapper {
       padding: 0;
    }
