--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -5,6 +5,7 @@
 
 @import "modules/_button";
 @import "modules/_feature-item";
+@import "modules/_footer";
 @import "modules/_generic-content";
 @import "modules/_headline";
 @import "modules/_large-hero";
