--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -11,6 +11,11 @@
    
    @mixin atMedium {
       background: rgba($mainBlue, .3);
+      position: fixed;
+      
+      &--dark {
+         background: rgba(23,51,72, .85);
+      }
    }
    
    &__btn-container {
@@ -29,10 +34,15 @@
       left: 50%;
       transform: translateX(-50%) scale(.8);
       transform-origin: 50% 0;
+      transition: transform .3s ease-out;
       
       @mixin atMedium {
          left: auto;
          transform: translateX(0%);
+         
+         .header--dark & {
+            transform: scale(.57);
+         }
       }
    }
    
