--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -10,11 +10,13 @@
 @import "modules/_header";
 @import "modules/_headline";
 @import "modules/_large-hero";
+@import "modules/_modal";
 @import "modules/_nav";
 @import "modules/_page-section";
 @import "modules/_reveal-item";
 @import "modules/_row";
 @import "modules/_section-title";
+@import "modules/_social-icons";
 @import "modules/_sprite";
 @import "modules/_testimonial";
 @import "modules/_wrapper";
