--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -95,7 +95,7 @@
    }
    
    /* equal height rule */
-   &--equal-height-at-medium {
+   .flexbox &--equal-height-at-medium {
       @mixin atMedium {
          display: flex;
          
@@ -106,7 +106,7 @@
          display: flex;
       }
    }
-   &--equal-height-at-large {
+   .flexbox &--equal-height-at-large {
       @mixin atLarge {
          display: flex;
          
